apps/base/snapcast/snapserver/manifests/snapserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapserver
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: audio
    protocol: TCP
    port: 1704
    targetPort: audio
  - name: tcp
    protocol: TCP
    port: 1705
    targetPort: tcp
---
kind: Service
apiVersion: v1
metadata:
  name: snapserver-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: audio
    protocol: TCP
    port: 1704
    targetPort: audio
  - name: tcp
    protocol: TCP
    port: 1705
    targetPort: tcp
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: snapserver
spec:
  replicas: 1
  serviceName: snapserver-headless
  template:
    spec:
      containers:
      - name: snapserver
        image: saiyato/snapserver
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/snapserver
        args: []
        ports:
        - name: http
          containerPort: 1780
        - name: audio
          containerPort: 1704
        - name: tcp
          containerPort: 1705
        volumeMounts:
        - name: fifo
          mountPath: /var/lib/fifo
      volumes:
      - name: fifo
        emptyDir: {}
