apps/base/snapcast/snapserver/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapserver
spec:
  tls:
  - hosts:
      - snapserver
    secretName: tls
  rules:
  - host: snapserver
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapserver
            port:
              name: http
